--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <section class="section-hero">
       <div class="hero">
         <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
-        <button class="hero-button" type="button">Замовити послугу</button>
+        <button class="hero-button" type="button" data-modal-open>Замовити послугу</button>
       </div>
     </section>
                                     <!-- принцыпы -->
@@ -373,6 +373,17 @@
     </div>
   </div>
 </footer>
+<div class="backdrop-modal is-hidden" data-modal>
+  <div class="modal">
+  <button class="button-close data-modal-close" aria-label="Close" data-modal-close>
+    <svg class="icon-close" width="30" height="30">
+      <use href="./images/sprite.svg#icon-close"></use>
+    </svg>
+  </button>
+  </div>
+</div>
+<script src="./js/modal.js">
+</script>
 </body>
 </html>
 
