--- a/index.html
+++ b/index.html
@@ -109,11 +109,13 @@
             <img src="./images/section03_02.jpg" alt="Мобільні додатки" width="370">
             <div class="activty-backdrop">
               <p>Мобільні додатки</p>
+            </div>
           </li>
           <li>
             <img src="./images/section03_03.jpg" alt="Дизайн інтенрфейса" width="370">
             <div class="activty-backdrop">
               <p>Дизайнерські рішення</p>
+            </div>
           </li>
         </ul>
       </div>
